# goldenmatch-extensions

./: .cursorrules  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  Trunk.toml  install.sh  llms.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
bridge/: Cargo.toml
bridge/src/: api.rs  convert.rs  error.rs  lib.rs
duckdb/: README.md  pyproject.toml
duckdb/goldenmatch_duckdb/: __init__.py  functions.py
duckdb/tests/: test_duckdb.py
postgres/: Cargo.toml  goldenmatch.control  goldenmatch_pg.control
postgres/sql/: goldenmatch_pg--0.1.0.sql
postgres/src/: lib.rs  pipeline.rs  quick.rs  spi.rs
