[package]
name = "goldenmatch-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Python bridge for GoldenMatch SQL extensions"

[dependencies]
pyo3 = { version = "0.23", features = ["auto-initialize"] }
arrow = { version = "54", features = ["ffi"] }
thiserror = "2"
serde_json = "1"
