[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "goldenmatch-duckdb"
version = "0.1.0"
description = "GoldenMatch entity resolution functions for DuckDB"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Ben Severn", email = "benzsevern@gmail.com" }]
keywords = ["entity-resolution", "duckdb", "deduplication", "record-matching"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "goldenmatch>=1.1.0",
    "duckdb>=1.0",
    "pyarrow>=14.0",
]

[project.urls]
Homepage = "https://github.com/benzsevern/goldenmatch-extensions"
Repository = "https://github.com/benzsevern/goldenmatch-extensions"

[tool.pytest.ini_options]
testpaths = ["tests"]
