[package]
name = "goldenmatch_pg"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "GoldenMatch entity resolution as a PostgreSQL extension"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["pg16"]
pg16 = ["pgrx/pg16"]
pg15 = ["pgrx/pg15"]
pg17 = ["pgrx/pg17"]
pg_test = []

[dependencies]
pgrx = "0.12.9"
goldenmatch-bridge = { path = "../bridge" }
serde_json = "1"

[[bin]]
name = "pgrx_embed_goldenmatch_pg"
path = "src/bin/pgrx_embed.rs"

[dev-dependencies]
pgrx-tests = "0.12.9"
